--- a/PortfolioV1MF.css
+++ b/PortfolioV1MF.css
@@ -86,7 +86,7 @@ html {
     content: "";
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.4);
@@ -294,7 +294,7 @@ html {
     position: absolute;
     width: 100%;
     /* Hace mas grande el height del video */
-    height: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
     /* El video cubre todo el fondo */
