--- a/PortfolioV1MF.css
+++ b/PortfolioV1MF.css
@@ -1392,9 +1392,12 @@
      margin-right: 8px;
  }
 
+
  .companyFooter a {
      font-size: 10px;
  }
+
+
 
  .titleRedes {
      text-align: end;
@@ -2008,7 +2011,7 @@
          padding-top: 2px;
      }
 
-     .divNewPrueba {
+     .divNewCounter {
          margin-top: -120px;
          margin-left: 280px;
      }
@@ -2145,26 +2148,46 @@
      }
 
      .mainSectionFooter {
-         align-items: start;
-         margin-top: 10px;
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
      }
 
      .redesFooter {
-         width: 750px;
-         align-items: end;
-         margin-left: 530px;
+         width: 100%;
+         display: flex;
+         flex-direction: row;
+         justify-content: space-around;
      }
 
+
      .divBrand {
-         width: 100px;
-         margin-left: 110px;
-         margin-bottom: -5px;
+         width: 28%;
          font-size: 18px;
+         margin-top: -53px;
+         text-align: start;
+     }
+
+     .brand {
+         margin-left: 30%;
+     }
+
+     .companyFooter {
+         width: 71%;
+         margin: 0rem;
      }
 
      .infoFooter {
          display: flex;
          flex-direction: row;
+     }
+
+     .linkFooterDiv {
+         height: 0rem;
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
+         margin: 0rem;
      }
 
      .firstDivFooter {
@@ -2181,13 +2204,14 @@
      }
 
      .logosRedesFooter {
-         height: 112px;
          flex-direction: row;
-         margin: 0px -45px 0px 0px;
+         margin: 0px;
      }
 
      .titleRedes {
+         text-align: end;
          font-size: 14px;
+         font-weight: 800;
          margin: 0px;
      }
 
@@ -2202,8 +2226,9 @@
      .iconRedes {
          width: 75px;
          justify-content: space-around;
-         margin-left: 15px;
+         margin-left: 7px;
      }
+
 
      .sizeLink {
          font-size: 22px;
